# arcli-backend

./: CHANGELOG.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
assets/: config.toml
scripts/: arc.sh  backend.sh  install-and-sign.sh
src/: args.rs  clients.rs  goals.rs  keyrings.rs  lib.rs  models.rs  tasks.rs
src/clients/: argo_client.rs  vault_client.rs
src/keyrings/: argo_keyring.rs  vault_keyring.rs
src/models/: argo.rs  args.rs  aws_profile.rs  config.rs  errors.rs  github.rs  goals.rs  influx.rs  kube_context.rs  kube_service.rs  log_level.rs  organization.rs  rds.rs  state.rs  vault.rs
src/tasks/: create_tab_completions.rs  get_argo_app_statuses.rs  get_aws_secret.rs  get_github_pr_files.rs  get_vault_secret.rs  influx_dump.rs  launch_influx.rs  logging.rs  login_to_vault.rs  perform_sso.rs  port_forward.rs  run_bazel_target.rs  run_pgcli.rs  select_actuator_service.rs  select_argo_instance.rs  select_aws_profile.rs  select_influx_instance.rs  select_kube_context.rs  select_organization.rs  select_rds_instance.rs  set_log_level.rs
