[package]
name = "arc-cli"
version = "0.3.1"
edition = "2024"

[dependencies]
async-trait = "0.1"
aws-config = "1.8.12"
aws-runtime = "1.5.17"
aws-sdk-secretsmanager = "1.97.0"
aws-sdk-ssooidc = "1.97.0"
aws-types = "1.3.11"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.65"
cliclack = "0.3.7"
console = "0.16.2"
hex = "0.4.3"
home = "0.5.12"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
# kube and k8s-openapi versions need to be compatible.
# Also use appropriate k8s-openapi feature for your k8s cluster version.
k8s-openapi = { version = "0.26.1", default-features = false, features = ["v1_34"] }
keyring = { version = "3.6.3", features = ["apple-native", "linux-native", "windows-native"] }
kube = { version = "2.0.1", features = ["config", "ws"] }
openidconnect = "4.0.1"
reqwest = { version = "0.12", features = ["json"] }
rustls = {  version = "0.23.35", default-features = false, features = ["aws-lc-rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9"
sha1 = "0.10.6"
thiserror = "2.0.17"
tiny_http = "0.12.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
toml = "0.9.11"
unicode-width = "0.2.2"
url = "2.5.7"
urlencoding = "2.1.3"
vaultrs = "0.7.4"
webbrowser = "1.0.6"

[[bin]]
name = "arc"
path = "src/main.rs"
